@@ -43,14 +43,14 @@ EBUILD emacs-18.59-r3.ebuild 2465 RMD160 87dafe0fcdc9631503d860a1151acd946ce14ab
 MD5 cd9890c79aa5fb5e92b6630bc206b199 emacs-18.59-r3.ebuild 2465
 RMD160 87dafe0fcdc9631503d860a1151acd946ce14aba emacs-18.59-r3.ebuild 2465
 SHA256 910740f3502ac9652df9a2ddb5df720c2fff500354a1b4bb3cf4916422354e52 emacs-18.59-r3.ebuild 2465
-EBUILD emacs-21.4-r10.ebuild 4887 RMD160 e6bd29abd3f1ce6ae133c3563fac8ad63bfcd1d8 SHA1 911df662eb02e57eb250dfc0faa2eaa24a51d012 SHA256 fd5c668d3d3531ecedb2b880b6434a1fdf0127113beff632c81638f525422dc4
-MD5 b5f92a1fd3a12faf13af2282b31b4257 emacs-21.4-r10.ebuild 4887
-RMD160 e6bd29abd3f1ce6ae133c3563fac8ad63bfcd1d8 emacs-21.4-r10.ebuild 4887
-SHA256 fd5c668d3d3531ecedb2b880b6434a1fdf0127113beff632c81638f525422dc4 emacs-21.4-r10.ebuild 4887
-MISC ChangeLog 2255 RMD160 f0219e454728a84366aa0d922911c80f5fac1827 SHA1 c8ef105214afbe18792efe9179cd69a8c69ef1a7 SHA256 628761f7df7810a0d8c4d32d4208c768f8f9944469dd396fee7d072137c59061
-MD5 f3844a135573db46f4f49bd4791e7524 ChangeLog 2255
-RMD160 f0219e454728a84366aa0d922911c80f5fac1827 ChangeLog 2255
-SHA256 628761f7df7810a0d8c4d32d4208c768f8f9944469dd396fee7d072137c59061 ChangeLog 2255
+EBUILD emacs-21.4-r10.ebuild 5544 RMD160 70499476d16a952f270b8669a84455ace5823868 SHA1 3e0ee0262ace1fefd07b0ac7866539f00cbbcfe1 SHA256 b4954979430a56c312a3edbebd1b45ea71492cea75b54fdf67990958c6764670
+MD5 8a7431389cb15a6fbde0decdba9c672b emacs-21.4-r10.ebuild 5544
+RMD160 70499476d16a952f270b8669a84455ace5823868 emacs-21.4-r10.ebuild 5544
+SHA256 b4954979430a56c312a3edbebd1b45ea71492cea75b54fdf67990958c6764670 emacs-21.4-r10.ebuild 5544
+MISC ChangeLog 2388 RMD160 3f00cfec88da625d6cb36639e5c78b1bf732917b SHA1 31cae78cbff5d4057af853bbb99da6b43aa38327 SHA256 a0ba8ae8d1e975ee4a660aa7ed2162511438fcf9325c551ffd05c3773f373289
+MD5 6bd3c4abdf8f6204474866e51cf64a0b ChangeLog 2388
+RMD160 3f00cfec88da625d6cb36639e5c78b1bf732917b ChangeLog 2388
+SHA256 a0ba8ae8d1e975ee4a660aa7ed2162511438fcf9325c551ffd05c3773f373289 ChangeLog 2388
 MISC metadata.xml 158 RMD160 415d172437ca754d24fc5ab186ba8e77934d96e4 SHA1 61f6eff9729cd87a725c2a70c81aca4270a17fc4 SHA256 1393bdef3a74343fdb40a112c7096a1af16f67e7a43413250de28dfe73810eab
 MD5 fcd33d07e4ee719b01157946734f4fe8 metadata.xml 158
 RMD160 415d172437ca754d24fc5ab186ba8e77934d96e4 metadata.xml 158
